Update index.html - Link do GitHub Atualizado.
Atualizado o link do GitHub com o novo nome de usuário.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                         </tr>
                             <tr>
                                 <td><i data-feather="github"></i></td>
-                                    <td><b>GitHub - PA</b><br>DGPlay</td>
-                                        <td><a href="https://github.com/Daniel-DGP22" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
+                                    <td><b>GitHub - PA</b><br>Daniel-DGPlay</td>
+                                        <td><a href="https://github.com/Daniel-DGPlay" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
                             </tr>
                                 <tr>
                                     <td><i data-feather="github"></i></td>
