Atualização da página
Adicionado o acesso ao LinkedIn e o README.md

--- a/index.html
+++ b/index.html
@@ -34,21 +34,30 @@
                             <td><b>Youtube</b><br>Canal do Youtube</td>
                                 <td><a href="https://www.youtube.com/c/DVFSTUDIOMix?sub_confirmation=1" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
                     </tr>
-                        <tr>
-                            <td><i data-feather="music"></i></td>
-                                <td><b>Sua Música.com</b></td>
-                                    <td><a href="https://www.suamusica.com.br/DVFSTUDIOMIX" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
-                        </tr>
-                            <tr>
-                                <td><i data-feather="github"></i></td>
-                                    <td><b>GitHub - PA</b><br>Daniel-DGPlay</td>
-                                        <td><a href="https://github.com/Daniel-DGPlay" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
-                            </tr>
-                                <tr>
-                                    <td><i data-feather="github"></i></td>
-                                        <td><b>GitHub - OA</b><br>DJM developers©</td>
-                                            <td><a href="https://github.com/dgplayrj-org" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
-                                </tr>
+                    <!-- / -->
+                    <tr>
+                        <td><i data-feather="music"></i></td>
+                            <td><b>Sua Música.com</b></td>
+                                <td><a href="https://www.suamusica.com.br/DVFSTUDIOMIX" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
+                    </tr>
+                    <!-- / -->
+                    <tr>
+                        <td><i data-feather="github"></i></td>
+                            <td><b>GitHub - PA</b><br>Daniel-DGPlay</td>
+                                <td><a href="https://github.com/Daniel-DGPlay" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
+                    </tr>
+                    <!-- / -->
+                    <tr>
+                        <td><i data-feather="github"></i></td>
+                            <td><b>GitHub - OA</b><br>DJM developers©</td>
+                                <td><a href="https://github.com/dgplayrj-org" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
+                    </tr>
+                    <!-- / -->
+                    <tr>
+                        <td><i data-feather="linkedin"></i></td>
+                            <td><b>Linkedin</b><br>DVF Dev</td>
+                                <td><a href="https://www.linkedin.com/in/dvf-dev/" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
+                    </tr>
                 </table>
             </main>
                 <footer><p><img width="30" src="./imgs/Icon-dvf.png" draggable="false" alt=""><b>DVF STUDIO Mix®</b>| © 2023 <img width="80" src="./imgs/Icon-dgp.png" draggable="false" alt=""></p></footer>
