Atualizar o index.html - Adicionando (id="idade" na teg <p>) no texto principal.
Foi adicionado a id "idade" para implementar a função de atualização da idade automaticamente.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="container">
             <main>
                 <img class="logo" width="200" src="./imgs/logo-dvf.png" draggable="false" alt="Logo DVF STUDIO Mix®">
-                    <h1>DVF STUDIO Mix®</h1><p>Estudante de T.I., 26 anos, RJ</p>
+                    <h1>DVF STUDIO Mix®</h1><p id="idade">Estudante de T.I., <span id="age"></span> anos, RJ</p>
 
                 <table>
                     <tr>
