Atualizar o index.html - Adicionando (id="ano" no footer)
Adicionado a id "ano" no footer para a atualização do ano automaticamente.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </tr>
                 </table>
             </main>
-                <footer><p><img width="30" src="./imgs/Icon-dvf.png" draggable="false" alt=""><b>DVF STUDIO Mix®</b>| © 2023 <img width="80" src="./imgs/Icon-dgp.png" draggable="false" alt=""></p></footer>
+                <footer><p><img width="30" src="./imgs/Icon-dvf.png" draggable="false" alt=""><b>DVF STUDIO Mix®</b>| © <span id="ano"></span> <img width="80" src="./imgs/Icon-dgp.png" draggable="false" alt=""></p></footer>
         </div>
             <!-- JS icons SVG -->
             <script>feather.replace()</script>
