Atualizar o index.html
- Alteração das informações do footer.
- Pequenas modificações e atualizações.

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
         <div class="container">
             <main>
                 <img class="logo" width="200" src="./imgs/logo-dvf.png" draggable="false" alt="Logo DVF STUDIO Mix®">
-                    <h1>DVF STUDIO Mix®</h1><p id="idade">Estudante de T.I., <span id="age"></span> anos, RJ</p>
-
+                    <h1>DVF STUDIO Mix®</h1><p id="idade">Estudante de T.I., <span id="age"></span> anos, RJ</p>
                 <table>
                     <tr>
                         <td><i data-feather="youtube"></i></td>
@@ -49,7 +48,7 @@
                     <!-- / -->
                     <tr>
                         <td><i data-feather="github"></i></td>
-                            <td><b>GitHub - OA</b><br>DJM developers©</td>
+                            <td><b>GitHub - OA</b><br>DJM developers<span style="position: absolute; top: auto; left: auto; font-size: 10px;">&copy</span></td>
                                 <td><a href="https://github.com/dgplayrj-org" target="_blank"><button class="btn"><span>Acessar</span></button></a></td>
                     </tr>
                     <!-- / -->
@@ -60,7 +59,7 @@
                     </tr>
                 </table>
             </main>
-                <footer><p><img width="30" src="./imgs/Icon-dvf.png" draggable="false" alt=""><b>DVF STUDIO Mix®</b>| © <span id="ano"></span> <img width="80" src="./imgs/Icon-dgp.png" draggable="false" alt=""></p></footer>
+                <footer><p>Copyright ©<span id="ano"></span><span style="font-weight: 800; margin-right: 2px;">DTM</span>Group<span style="font-size: 10px;">&reg</span><img width="40" src="./imgs/icon-logo-branco-dtm.png" draggable="false" alt=""></p></footer>
         </div>
             <!-- JS icons SVG -->
             <script>feather.replace()</script>
